# scb-static

./: .gitignore  .pre-commit-config.yaml  download_data.py  download_metadata.py  pyproject.toml
scripts/: download_metadata.py  mcpp.py
src/scb-dl/: download_data.py
src/scb_dl/: download_data.py  download_metadata.py  utils.py
